--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         margin-left: 22vw;
     ">
         <img src="./IMG/left col.png" style="     width: 20vw;
-        height: fit-content;
+        height: auto;
         margin-left: 20vw;
         margin-top: 1vw;">
         <img src="./IMG/right col.png" style="      width: 40vw;
-        height: fit-content;
+        height: auto;
         margin-left: 13vw;
         margin-top: 0vw;">
         
