--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
         margin-left: 11vw;">
         <img src="./IMG/head col.png" style="    display: block;
         width: 66vw;
-        margin-bottom: 4vw;
+        margin-bottom: 2vw;
         margin-top: -6vw;
         margin-left: 22vw;
     ">
         <img src="./IMG/left col.png" style="     width: 20vw;
-        height: auto;
+        height: fit-content;
         margin-left: 20vw;
         margin-top: 1vw;">
         <img src="./IMG/right col.png" style="      width: 40vw;
-        height: auto;
+        height: fit-content;
         margin-left: 13vw;
         margin-top: 0vw;">
         
         <div class="ring1">
             <span class="left"></span>
-            <span class="arrow"></span>
+            <span class="arrow1"></span>
             <span class="right"></span>
         </div>
         <div class="ring2">
