--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="ring1">
             <span class="left"></span>
             <span class="arrow1"></span>
-            <span class="right"></span>
+            <span class="right1"></span>
         </div>
         <div class="ring2">
             <span class="left2"></span>
