--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <img src='./IMG/btnDone.png' style='display:none'>
     <link rel="stylesheet" href="style.css">
     <script src="./index.js" defer></script>
     <script src="./arrow.js" defer></script>
