--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <img src='./IMG/btnDone.png' style='display:none'>
     <link rel="stylesheet" href="style.css">
     <script src="./index.js" defer></script>
     <script src="./arrow.js" defer></script>
@@ -31,11 +30,18 @@
 </head>
 <body>
     <div id="container">
+        <div id="score">
+            <p id="ans">2</p>
+            <hr>
+            <p id="total">08</p>
+
+        </div>
         <div class="popup" id="popup1">
             <p>Interactive Lesson</p>
             <p>Kindly <b>rotate</b> your device.</p>
             <a href="#" onclick="location.reload()">Ok!</a>
           </div>
+        <img src="./IMG/Logo.jpg" id="logo">  
         <img src='./IMG/SUBMIT.png' id="submit">
         <img src='./IMG/RESET.png' id="reset">
         <img src='./IMG/MOBILE.png' id="mobile">
@@ -89,6 +95,7 @@
             <span class="arrow6"></span>
             <span class="right6"></span>
         </div>
+        
         <div class="ring8">
             <span class="left8"></span>
             <span class="arrow8"></span>
@@ -100,7 +107,6 @@
             <span class="right7"></span>
         </div>
 
-        
         <div id="ringa" a="0" class="drop"></div>
         <div id="ringb" b="0" class="drop"></div>
         <div id="ringc" c="0" class="drop"></div>
